--- a/app/scss/lego/_header.scss
+++ b/app/scss/lego/_header.scss
@@ -93,12 +93,16 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  @include r($lg) {
+    width: fit-content;
+  }
   &__list {
     display: flex;
     margin-right: 50px;
 
     @include r($lg) {
       display: none;
+      width: 0;
     }
   }
 
