--- a/app/scss/lego/_filters.scss
+++ b/app/scss/lego/_filters.scss
@@ -18,8 +18,30 @@
     width: 40px;
     margin-left: auto;
     margin-bottom: 20px;
-    background-color: #FAEDED;
+    position: relative;
     display: none;
+    border-radius: 3px;
+    background-color: #FAEDED;
+    transition: box-shadow 0.4s, opacity 0.4s;
+    &:focus {
+      box-shadow: 0 0 0 2px rgba($accent, 0.7);
+    }
+    &:hover {
+      .filters__close-icon {
+        fill: $accent;
+      };
+    }
+    &:active {
+      opacity: 0.7;
+    }
+  }
+  &__close-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    fill: $darkBlue-900;
+    transition: fill 0.4s;
   }
   
   &__title {
