--- a/app/scss/lego/_mobile-menu.scss
+++ b/app/scss/lego/_mobile-menu.scss
@@ -25,6 +25,30 @@
   &__btn {
     height: 44px;
     width: 44px;
+    position: relative;
+    border-radius: 3px;
+    transition: box-shadow 0.4s, opacity 0.4s;
+    &:focus {
+      box-shadow: 0 0 0 2px rgba($accent, 0.7);
+    }
+    &:hover {
+      background-color: rgba($accent, 0.1);
+      .mobile-menu__icon {
+        fill: $accent;
+      };
+    }
+    &:active {
+      opacity: 0.7;
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    fill: $darkBlue-900;
+    transition: fill 0.4s;
   }
 
   &__list {
@@ -58,10 +82,6 @@
     &.current {
       color: $accent;
     }
-  }
-
-  &__icon {
-    fill: $darkBlue-900;
   }
 
   .contacts {
